--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.1.1",
     "axios": "^1.6.7",
     "dotenv": "^17.0.0",
+    "framer-motion": "^12.22.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.525.0",
