--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -1,12 +1,13 @@
 [build]
-builder = "nixpacks"
-buildCommand = "npm run build"
+builder = "DOCKERFILE"
+dockerfilePath = "Dockerfile"
 
 [deploy]
 startCommand = "npm run start:prod"
 healthcheckPath = "/api/health"
 healthcheckTimeout = 100
-restartPolicyType = "on_failure"
+restartPolicyType = "ON_FAILURE"
+restartPolicyMaxRetries = 3
 
 [deploy.envs]
 NODE_ENV = "production" 
