--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -3,7 +3,7 @@ builder = "nixpacks"
 buildCommand = "npm run build"
 
 [deploy]
-startCommand = "npm run start:prod"
+startCommand = "npx prisma migrate deploy && npm run start:prod"
 healthcheckPath = "/api/health"
 healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
