--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -8,4 +8,5 @@ restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
 [deploy.envs]
-NODE_ENV = "production" 
+NODE_ENV = "production"
+PORT = "8080" 
