--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -1,12 +1,10 @@
 [build]
 builder = "nixpacks"
-buildCommand = "npm ci && npx prisma generate && NODE_ENV=production npm run build"
 
 [deploy]
-startCommand = "npx prisma migrate deploy && NODE_ENV=production node dist/main.js"
+startCommand = "npx prisma generate && npx prisma migrate deploy && node dist/main.js"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
 [deploy.envs]
 NODE_ENV = "production"
-PORT = "8080" 
