--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -1,8 +1,9 @@
 [build]
 builder = "nixpacks"
+buildCommand = "npm ci && npx prisma generate && npm run build"
 
 [deploy]
-startCommand = "npx prisma generate && npx prisma migrate deploy && node dist/main.js"
+startCommand = "npx prisma migrate deploy && npx prisma db seed && node dist/main.js"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
