--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -1,9 +1,8 @@
 [build]
 builder = "nixpacks"
-buildCommand = "npm ci && npx prisma generate && npm run build"
 
 [deploy]
-startCommand = "npx prisma migrate deploy && npx prisma db seed && node dist/main.js"
+startCommand = "npx prisma migrate deploy && echo 'Migrations complete, starting application...' && node dist/main.js"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
