--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,7 +13,8 @@ RUN npm install
 
 COPY . .
 
-RUN npm run build
+# Explicitly run the build and verify dist exists
+RUN npm run build && ls -la dist/
 
 # Production stage
 FROM node:20-alpine AS production
@@ -31,9 +32,12 @@ COPY prisma ./prisma/
 
 RUN npm install --only=production
 
-COPY . .
-
+# Copy the built dist from development stage
 COPY --from=development /usr/src/app/dist ./dist
+# Copy the source files needed for proper module resolution
+COPY --from=development /usr/src/app/src ./src
+# Verify dist exists
+RUN ls -la dist/
 
 # Simple fix: Run migrations and start the app
 CMD npx prisma migrate deploy && node dist/main.js
