--- a/.gitignore
+++ b/.gitignore
@@ -1,90 +1,57 @@
 # Dependencies
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+.pnp/
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
 
-# Production builds
+# Environment variables
+.env
+.env.*
+!.env.example
+
+# Build outputs
 dist/
 build/
 .next/
 out/
+.nuxt/
+.out/
+.storybook-out/
 misc/
 
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# Debug & Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
+# Testing & Coverage
 coverage/
+.nyc_output/
 *.lcov
 
-# Logs
-logs
-*.log
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
+# Cache directories
+.npm/
 .eslintcache
-
-# Microbundle cache
+.parcel-cache/
+.cache/
 .rpt2_cache/
 .rts2_cache_cjs/
 .rts2_cache_es/
 .rts2_cache_umd/
+.fusebox/
 
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
-.env
-.env.test
-.env*.local
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# Next.js build output
-.next
-
-# Nuxt.js build / generate output
-.nuxt
-dist
-
-# Gatsby files
-.cache/
-
-# Storybook build outputs
-.out
-.storybook-out
-
-# Temporary folders
-tmp/
-temp/
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
 
 # Editor directories and files
 .vscode/
@@ -104,31 +71,15 @@ temp/
 ehthumbs.db
 Thumbs.db
 
-# Database
-*.sqlite
-*.db
-
 # TypeScript
 *.tsbuildinfo
+next-env.d.ts
 
-# Serverless directories
+# Misc
+*.tgz
 .serverless/
-
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
 .dynamodb/
-
-# TernJS port file
 .tern-port
-
-# Stores VSCode versions used for testing VSCode extensions
-.vscode-test
-
-# yarn v2
-.yarn/cache
-.yarn/unplugged
-.yarn/build-state.yml
-.yarn/install-state.gz
-.pnp.* 
+.vscode-test/
+*.sqlite
+*.db 
