--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -3,6 +3,8 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.pnp/
+.pnp.*
 
 # Build output
 dist/
@@ -10,8 +12,8 @@ build/
 
 # Environment variables
 .env
-.env.local
-.env.*.local
+.env.*
+!.env.example
 
 # IDE
 .idea/
@@ -30,6 +32,15 @@ logs/
 coverage/
 .nyc_output/
 
+# TypeScript
+*.tsbuildinfo
+
+# Cache
+.eslintcache
+.npm
+
 # Misc
 .DS_Store
 Thumbs.db
+tmp/
+temp/
