changes in dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,13 +8,16 @@ RUN npm install -g npm@11.3.0
 
 COPY package*.json ./
 COPY prisma ./prisma/
+COPY tsconfig*.json ./
 
 RUN npm install
 
 COPY . .
 
-# Explicitly run the build and verify dist exists
-RUN npm run build && ls -la dist/
+# Build and verify the build output
+RUN npm run build && \
+    ls -la dist/ && \
+    test -f dist/main.js || exit 1
 
 # Production stage
 FROM node:20-alpine AS production
@@ -29,15 +32,16 @@ RUN npm install -g npm@11.3.0
 
 COPY package*.json ./
 COPY prisma ./prisma/
+COPY tsconfig*.json ./
 
 RUN npm install --only=production
 
-# Copy the built dist from development stage
+# Copy the built dist and necessary source files
 COPY --from=development /usr/src/app/dist ./dist
-# Copy the source files needed for proper module resolution
 COPY --from=development /usr/src/app/src ./src
-# Verify dist exists
-RUN ls -la dist/
+
+# Verify dist/main.js exists
+RUN test -f dist/main.js || exit 1
 
 # Simple fix: Run migrations and start the app
 CMD npx prisma migrate deploy && node dist/main.js
