--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@heroicons/react": "^2.1.1",
+    "@phosphor-icons/react": "^2.1.10",
     "axios": "^1.6.7",
     "dotenv": "^17.0.0",
     "framer-motion": "^12.22.0",
