--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL="https://<YOUR_API_SERVERLINK>/"
+NEXT_PUBLIC_API_URL="<YOUR_API_SERVER_URL>"
 NEXT_PUBLIC_DEEPSEEK_API_KEY="YOUR_DEEPSEEK_API_KEY"
